# trello-rs

./: .gitignore  Cargo.toml  trello.skill
.github/workflows/: ci.yml
docs/: plan.md  swagger.v3.json
src/: auth.rs  cache.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  params.rs
src/models/: action.rs  attachment.rs  board.rs  board_background.rs  board_star.rs  card.rs  checklist.rs  common.rs  custom_field.rs  emoji.rs  enterprise.rs  label.rs  list.rs  member.rs  mod.rs  notification.rs  organization.rs  plugin.rs  saved_search.rs  search.rs  tag.rs  token.rs  webhook.rs
src/resources/: actions.rs  applications.rs  batch.rs  boards.rs  cards.rs  checklists.rs  custom_fields.rs  emoji.rs  enterprises.rs  labels.rs  lists.rs  members.rs  mod.rs  notifications.rs  organizations.rs  plugins.rs  search.rs  tokens.rs  webhooks.rs
tests/: integration_test.sh  model_tests.rs
